# masjiduna-waqt

./: .gitignore  .npmignore  README.md  bunfig.toml  package.json  tsconfig.dist-sanity.json  tsconfig.json  tsup.config.ts
.github/workflows/: ci.yml  release-http-server.yml  release.yml
api/: server.ts
benchmarks/: ffi.ts  http-rust.ts  http.ts  memo-micro.ts  prayer-times.ts  single-call.ts  trig-micro-2.ts  trig-micro.ts  wasm-batch.ts  wasm.ts
docs/: calculation_plan.md
http-server/: Cargo.toml  Makefile
http-server/src/: doc.html  index.html  lib.rs  main.rs
http-server/src/waqt/: compute.rs  config.rs  mod.rs  qibla.rs  solar.rs  trig.rs
http-server/tests/: e2e-api.test.ts  e2e.rs  unit.rs  validation.test.ts
napi-core/: Cargo.toml  package.json
napi-core/profiling/: Cargo.toml
napi-core/profiling/src/: main.rs
napi-core/src/: engine.rs  lib.rs
scripts/: build-bin.ts  fetch-fixtures.ts  gen-baseline.ts
src/: config.ts  date-utils.ts  format.ts  high-latitude.ts  hour-angle.ts  index.ts  moonsighting.ts  prayer-utils.ts  prayers.ts  qibla.ts  schema.ts  solar.ts  sunnah.ts  units.ts
src/napi/: index.ts
src/wasm/: index.ts
tests/: helpers.ts
tests/dist-sanity/: sanity.test.ts
tests/e2e/: aladhan.test.ts  all-timings.test.ts  config.ts
tests/napi/: aladhan.test.ts  prayers-context.test.ts  prayers.test.ts
tests/unit/: accuracy.test.ts  adhan-compat.test.ts  astronomical.test.ts  date-utils.test.ts  format.test.ts  high-latitude.test.ts  hour-angle.test.ts  math.test.ts  moonsighting.test.ts  (+8 more)
wasm-core/: Cargo.toml  build.sh
(+9 files in other folders)
