[package]
name = "salah-waqt-http"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.8"
tokio = { version = "1.49", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
mimalloc = { version = "0.1.48", default-features = false }
chrono = { version = "0.4.43", default-features = false, features = ["std", "clock"] }
chrono-tz = "0.10.4"
itoa = "1"
ryu = "1"
lru = "0.12"
bytes = "1"
fast-float = "0.2"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"

[profile.profiling]
inherits = "release"
debug = true
strip = false
lto = "thin"
